--- a/Habibi/Habibi.html
+++ b/Habibi/Habibi.html
@@ -9,7 +9,7 @@
 
 <body>
 <img src="Habibi1.jpg"> <br>
-1 issue in 2011 by Pantheon
+1 issue in 2011 by <a href="../PantheonBooks/pantheonbooks.html">Pantheon</a>
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
