--- a/JimmyCorrigan/JimmyCorrigan.html
+++ b/JimmyCorrigan/JimmyCorrigan.html
@@ -9,7 +9,7 @@
 
 <body>
 <img src="JimmyCorrigan1.jpg"> <br>
-
+Created by Chris Ware, collection published in 2000 by <a href="../PantheonBooks/pantheonbooks.html">Pantheon</a>
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
