--- a/Maus/maus.html
+++ b/Maus/maus.html
@@ -7,14 +7,10 @@
 </head>
 
 <body>
-<h2>Maus: A Survivors Tale</h2>
 <img src="Maus01.jpg"> &nbsp; <img src="Maus02.jpg"><br>
-Series: A two book collection originally from a series in RAW Magazine.<br>
-Characters: Art, Vladek, Anja, Richieu<br>
-Publisher: <a href="../../Publisher/pantheonbooks.html">Pantheon Books</a> 1980<br>
-Illustrator: Art Spiegelman<br>
-Writer: Art Spiegelman<br>
-Story: Book I: My Father Bleed History
+A two book collection from a series in RAW Magazine by Art Spiegelman in 1980 by <a href="../PantheonBooks/pantheonbooks.html">Pantheon Books</a>
+<p>
+Book I: My Father Bleed History
 </p><p>
 At the start of Book I, Art arrives at his father Vladek’s home in order to record his father’s Holocaust memories for a book he plans to write about his father’s life. Vladek begins his story with his life as a young man in Sosnowiec, Poland, in the years leading up to World War II. He meets and marries Anja Zylberberg, a young, intelligent woman from a well-to-do family who helps him to found his own textile factory.
 </p><p>
