--- a/PantheonBooks/pantheonbooks.html
+++ b/PantheonBooks/pantheonbooks.html
@@ -15,6 +15,55 @@ Pantheon Books<br>
 Bertelsmann, the German company that also owns Bantam Books, Doubleday Publishing, Dell Publishing, Times Books, the Modern Library, Everyman's Library, Vintage Books, Crown Publishing Group, Schocken Books, Ballantine Books, Del Rey Books, Fawcett Publications also acquired Random House in 1998, making Bertelsmann the largest publisher of American books.
 </p><p>
 In addition to classics, international fiction, and trade paperbacks, recently Pantheon has moved aggressively into the comics market. It has published many critically acclaimed graphic novels and comics collections, including Ice Haven, La Perdida, Read Yourself RAW, Maus, In the Shadow of No Towers, and Black Hole. Many of its comics publications are high-quality collected editions of works originally serialized by other publishers such as Fantagraphics Books.
+</p><p>
+Comics and graphic novels
+</p><p>
+    The "...for Beginners" series of comics:
+<ul>
+<li>    Go for Beginners by Kaoru Iwamoto and Ishi Press (1976) ISBN 0394733312
+<li>    Lenin for Beginners by Richard Appignanesi and Oscar Zarate (1978)
+<li>    Freud for Beginners by Richard Appignanesi and Oscar Zarate (1979)
+<li>    Trotsky for Beginners by Tariq Ali (1980)
+<li>    Ecology for Beginners by Stephen Croall and William Rankin (1981)
+<li>    Marx's Kapital for Beginners by David N. Smith, and Phil Evans, and Karl Marx (1982)
+<li>    Nuclear Power for Beginners by Stephen Croall and Kaianders Sempler (1983)
+<li>    Economists for Beginners by Bernard Canavan (1983)
+</ul>
+</p><p>  
+<li><a href="../Habibi/Habibi.html">Habibi</a> (2011)
+<li>Love is Hell by Matt Groening (1985)
+<li><a href="../Maus/maus.html">Maus I: A Survivor's Tale: My Father Bleeds History</a> by Art Spiegelman (1986)
+<li>Read Yourself RAW by Art Spiegelman and Françoise Mouly (1987)
+<li>School is Hell: A Cartoon Book by Matt Groening (1987)
+<li>Childhood is Hell: A Cartoon Book" by Matt Groening (1988)
+<li>The Big Book of Hell: A Cartoon Book by Matt Groening (1990)
+<li><a href="../Maus/maus.html">Maus II: A Survivor's Tale: And Here My Troubles Began</a> by Art Spiegelman (1991)
+<li>Love is Still Hell: A Cartoon Book by Matt Groening (1994)
+<li>The Jew of New York by Ben Katchor (1998)
+<li>Ethel &amp; Ernest by Raymond Briggs (1998)
+<li>David Boring by Daniel Clowes (2000)
+<li><a href="../JimmyCorrigan/JimmyCorrigan.html">Jimmy Corrigan: The Smartest Kid on Earth</a> by Chris Ware (2000)
+<li>Julius Knipl, Real Estate Photographer: The Beauty Supply District by Ben Katchor (2000)
+<li>In the Floyd Archives: A Psycho-Bestiary by Sarah Boxer (2001)
+<li><a href="Persepolis/Persepolis.html">Persepolis</a> by Marjane Satrapi (2003)
+<li>In the Shadow of No Towers by Art Spiegelman (2004)
+<li><a href="Persepolis/Persepolis.html">Persepolis II</a> by Marjane Satrapi (2004)
+<li>Amy and Jordan by Mark Beyer (2004)
+<li>Black Hole by Charles Burns (2005)
+<li>Embroideries by Marjane Satrapi (2005)
+<li>Epileptic by David Beauchard (2005)
+<li>Ice Haven by Daniel Clowes (2005)
+<li>The Rabbi's Cat by Joann Sfar (2005)
+<li>Chicken with Plums by Marjane Satrapi (2006)
+<li>La Perdida by Jessica Abel (2006)
+<li>A Scanner Darkly by Philip K. Dick, adapted by Richard Linklater (2006)
+<li>Alias the Cat! by Kim Deitch (2007)
+<li>Breakdowns: Portrait of the Artist as a Young %@*! by Art Spiegelman (2008)
+<li>My Brain Is Hanging Upside Down by David Heatley (2008)
+<li>Asterios Polyp by David Mazzucchelli (2009)
+<li>A.D.: New Orleans After the Deluge by Josh Neufeld (2009)
+<li>The Cardboard Valise by Ben Katchor (2011)
+<li>My Brother's Husband by Gengoroh Tagame (2014)
 </p>
 
 </body>
