--- a/index.html
+++ b/index.html
@@ -6017,7 +6017,7 @@
 <tr>
 <td>Exciting Comics</td>
 <td>1944</td>
-<td>Nedor/Better/Pines</td>
+<td>Pines</td>
 <td><a href="Exciting/Exciting.html">Details</a></td>
 </tr>
 
@@ -11442,6 +11442,13 @@
 </tr>
 
 <tr>
+<td>Nedor Comics</td>
+<td>1936</td>
+<td>Publisher</td>
+<td><a href="Pines/Pines.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Neil Gaiman</td>
 <td>1960</td>
 <td>Creator</td>
@@ -12114,7 +12121,7 @@
 </tr>
 
 <tr>
-<td>Pantheon</td>
+<td>Pantheon Books</td>
 <td>1942</td>
 <td>Publisher</td>
 <td><a href="PantheonBooks/pantheonbooks.html">Details</a></td>
@@ -12188,6 +12195,13 @@
 <td>2005</td>
 <td>Dark Horse</td>
 <td><a href="Perhapanauts/Perhapanauts.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Persepolis</td>
+<td>2000</td>
+<td>Pantheon</td>
+<td><a href="Persepolis/Persepolis.html">Details</a></td>
 </tr>
 
 <tr>
@@ -12272,6 +12286,13 @@
 <td>1975</td>
 <td>Atlas Seaboard</td>
 <td><a href="Phoenix/Phoenix.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Pines Comics</td>
+<td>1936</td>
+<td>Publisher</td>
+<td><a href="Pines/Pines.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14376,6 +14397,13 @@
 <td>1922</td>
 <td>Creator</td>
 <td><a href="StanLee/StanLee.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Standard Comics</td>
+<td>1936</td>
+<td>Publisher</td>
+<td><a href="Pines/Pines.html">Details</a></td>
 </tr>
 
 <tr>
