--- a/Dynamite/Dynamite.html
+++ b/Dynamite/Dynamite.html
@@ -31,6 +31,102 @@ In May 2010, Dynamite Entertainment acquired the Chaos! Comics' library and all 
 In October 2013, it was announced that Dynamite would relaunch several titles originally published by Gold Key Comics and that Magnus: Robot Fighter, The Occult Files of Doctor Spektor, Solar: Man of the Atom and Turok would be the first titles of the new line.
 </p><p>
 In July 2016, prior to Comic-Con International, The New York Times ran a story about Dynamite Entertainment. In it, best-selling author Andy Mangels was revealed to be writing a prestigious new intercompany crossover mini-series for the company, in conjunction with DC Comics: Wonder Woman '77 Meets The Bionic Woman, bringing together the Lynda Carter television character with Lindsay Wagner's fellow 1970s television super-heroine. The series was set to start in Fall 2016.
+</p><p>
+<b>Titles</b>
+</p><p>
+
+<li>A Game of Thrones
+<li>Grumpy Cat and Pokey
+<li>Army of Darkness
+<li>Adolescent Radioactive Black Belt Hamsters
+<li>Athena
+<li>Bad Boy
+<li>Battlefields
+<li>Battlestar Galactica
+<li>Betty Boop
+<li>The Bionic Man
+<li>The Bionic Woman
+<li>Black Terror
+<li>Black Bat
+<li>Bob's Burgers
+<li>The Boys
+<li>Brickleberry
+<li>Buck Rogers
+<li>Captain Victory
+<li>The Complete Alice in Wonderland
+<li>The Complete Dracula
+<li>Damsels
+<li>Dark Shadows
+<li>Dan Dare
+<li>Dead Irons
+<li>Devolution
+<li>Elvira: Mistress of the Dark
+<li>Eva - Daughter of Dracula
+<li>Expendables
+<li>Flash Gordon: Zeitgeist
+<li>Freddy vs. Jason vs. Ash
+<li>A Game of Thrones
+<li>The Green Hornet
+<li>Grimm
+<li>Highlander
+<li>Intertwined
+<li>Sherlock Holmes VS. Harry Houdini
+<li>James Bond
+<li>Felix Leiter (Spin-off)
+<li>Jennifer Blood
+<li>Jungle Girl
+<li>Just a Pilgrim
+<li>Kato
+<li>Kid Kosmos
+<li>Killer Instinct
+<li>Kirby: Genesis
+<li>The Lone Ranger
+<li>Lord of the Jungle – based on Tarzan
+<li>Lords of Mars – a "Warlord of Mars" / "Lord of the Jungle" crossover
+<li>The Man with No Name
+<li>Masks
+<li>Masquerade
+<li>Mercenaries
+<li>Mighty Mouse
+<li>Ming The Merciless
+<li>Nancy Drew and the Hardy Boys
+<li>Painkiller Jane
+<li>The Phantom
+<li>Project Superpowers
+<li>Project Superpowers: Chapter Two
+<li>Prophecy
+<li>Queen Sonja
+<li>Raise the Dead
+<li>Red Sonja
+<li>Re-Animator
+<li>RoboCop
+<li>Savage Tales
+<li>Scout
+<li>The Shadow
+<li>Silver Star
+<li>Six from Sirius
+<li>The Shape of Elvira
+<li>The Spider
+<li>Stargate
+<li>Super Zombies
+<li>Terminator
+<li>The Twilight Zone
+<li>Turok
+<li>Thulsa Doom
+<li>Vampirella
+<li>Vampirella and the Scarlet Legion
+<li>Vampire Huntress
+<li>Voltron
+<li>Voltron: Year One
+<li>Warlord of Mars: Dejah Thoris
+<li>Warlord of Mars: Fall of Barsoom
+<li>Warriors of Mars
+<li>Dejah Thoris and the White Apes of Mars
+<li>Dejah Thoris and the Green Men of Mars
+<li>Dejah of Mars
+<li>Xena: Warrior Princess
+<li>Zorro
+
 </p>
 </body>
 </html>
