--- a/Fantagraphics/Fantagraphics.html
+++ b/Fantagraphics/Fantagraphics.html
@@ -20,6 +20,160 @@ As comics journalist (and former Fantagraphics employee) Michael Dean writes, "t
 Beginning in 1979, Fantagraphics began publishing comics, starting with Jay Disbrow's The Flames of Gyro. They gained wider recognition in 1982 by publishing the Hernandez brothers' Love and Rockets, and moved on to such critically acclaimed and award-winning series as Acme Novelty Library, Eightball, and Hate.
 </p><p>
 Catron acted as Fantagraphics' co-publisher until 1985 (also handling advertising and circulation for The Comics Journal from 1982–1985), when he left the company.
+</p><p>
+Titles
+</p><p>
+<li>A Strange Kind of Woman by Inu (2011)   
+<li><a href="../AbandonedCars/AbandonedCars.html">Abandoned Cars</a> 
+<li><a href="../AcmeNoveltyLibrary/AcmeNoveltyLibrary.html">Acme Novelty Library</a>
+<li>Adult Frankenstein by Enrico Teodorani
+<li>Adventures of Captain Jack
+<li>Alphabetical Ballad of Carnality by David Sandlin
+<li>Amazing Heroes – a defunct publication devoted mostly to mainstream comics
+<li>Amsterdam by Simon Hanselmann
+<li>Angry Youth Comix
+<li>Anything Goes!
+<li>Anywhere But Here by Miki Tori
+<li>Artbabe
+<li>Aunts in your Pants by Enrico Teodorani
+<li>Barnaby
+<li>Beasts by Jacob Covey
+<li>Big Mouth
+<li>Biologic Show
+<li>Birdland by Gilbert Hernandez
+<li>BLAB!
+<li>Black Hole
+<li>Black is the Color by Julia Gfrörer
+<li>Blood Orange
+<li>Bondage Fairies (1996)
+<li>Captain Easy
+<li>Caricature by Dan Clowes
+<li>Castle Waiting
+<li>Comics Journal – magazine of comics news and criticism
+<li>Complete Carl Barks Disney Library
+<li>Complete Crumb Comics
+<li>Complete E. C. Segar Popeye
+<li>Complete Peanuts
+<li>Countdown: Sex Bomb (1997)
+<li>Crap
+<li>Critters
+<li>Cud
+<li>Dalgoda
+<li>Dennis the Menace
+<li>Disney Masters
+<li>Domin-8 Me! by Sesshu Takemura (2007)
+<li>Don Rosa Library
+<li>Doofus
+<li>Drawn to Berlin by Ali Fitzgerald
+<li>Duplex Planet Illustrated
+<li>EC Artists' Library
+<li>Eightball
+<li>Elizabeth Bathory by Raulo Cáceres
+<li>Evil Eye
+<li>Eye of Mongombo
+<li>Feiffer: The Collected Works
+<li>Fission Chicken
+<li>Frank
+<li>Frederick and Eloise: A Love Story by Brian Biggs
+<li>Ganges
+<li>Ganzfeld
+<li>Ghost World by Dan Clowes
+<li>Good Girls
+<li>Graphic Story Monthly
+<li>Grit Bath
+<li>Harum Scarum by Lewis Trondheim
+<li>Hate
+<li>Hip Hop Family Tree by Ed Piskor
+<li>Honk – magazine of comics news and criticism
+<li>Hoodoodad by Lewis Trondheim
+<li>Hot Tails (1996)
+<li>Hotwire Comix and Capers
+<li>Humbug
+<li>I Killed Adolf Hitler by Jason
+<li>Ironwood by Bill Willingham
+<li>Jim
+<li>Jizz
+<li>Journey
+<li>Karate Girl
+<li>King by Ho Che Anderson
+<li>Krazy Kat
+<li>La Perdida
+<li>Laid Waste by Julia Gfrörer
+<li>Lie and How We Told It by Tommi Parrish
+<li>Like a Velvet Glove Cast in Iron by Dan Clowes
+<li>Little Nemo
+<li>Little Orphan Annie
+<li>Locas by Jaime Hernandez
+<li>Love &amp; Hate by Enomoto Heights (2011)
+<li>Love and Rockets
+<li>Love Selection by Gunma Kisaragi (2010)
+<li>Meatcake
+<li>Mechanics (Three-issue miniseries)
+<li>Megahex
+<li>Megahex by Simon Hanselmann
+<li>Milk Mama by Yukiyanagi (2008)
+<li>Misty Girl Extreme (1997)
+<li>MOME
+<li>My Favorite Thing Is Monsters by Emil Ferris
+<li>Nancy
+<li>Naughty Bits
+<li>Neat Stuff
+<li>Nemo, the Classic Comics Library – a defunct magazine devoted to classic comics
+<li>New Bondage Fairies: Fairie Fetish (1998)
+<li>Nimrod
+<li>NOW
+<li>Omaha the Cat Dancer by Kate Worley (story) and Reed Waller (art)
+<li>One More Year by Simon Hanselmann
+<li>Palestine by Joe Sacco
+<li>Palomar by Gilbert Hernandez
+<li>Patience by Dan Clowes
+<li>Pictopia
+<li>Pink Sniper by Kengo Yonekura (2006)
+<li>Pixy by Max Andersson
+<li>Pogo: The Complete Syndicated Comic Strips
+<li>Poor Arnold's Almanac
+<li>Powerhouse Pepper
+<li>Prime Cuts
+<li>Prince Valiant
+<li>Raisin Pie
+<li>Ramba by Rossi, Delizia, and Laurenti
+<li>Real Stuff
+<li>Safe Area Goražde by Joe Sacco
+<li>Sam's Strip
+<li>Schizo
+<li>Secret Plot (1997)
+<li>Secret Plot Deep (1998)
+<li>Shadowland
+<li>Silky Whip by Oh! great (1998)
+<li>Slut Girl (2000)
+<li>Small Favors by Colleen Coover
+<li>Snake Eyes
+<li>Spunky Knight (1996)
+<li>Sticky by Dale Lazarov and Steve MacIsaac
+<li>Stinz
+<li>Stuff of Dreams
+<li>Submit! by Silvano &amp; Enrico Teodorani
+<li>Super Taboo (1996)
+<li>Tales Designed to Thrizzle
+<li>Tales from the Clit by Enrico Teodorani
+<li>Tijuana Bibles
+<li>Too Hot to Handle by Jogi Tsukino (2010)
+<li>Unsupervised Existence
+<li>Untamed Love by Frank Frazetta
+<li>Uptight
+<li>Usagi Yojimbo (up to volume 7)
+<li>Vladrushka and Rosa &amp; Annalisa by JLRoberson
+<li>Walt Disney's Mickey Mouse
+<li>Wandering Son
+<li>Weasel
+<li>Weathercraft, Congress of the Animals, and Fran by Jim Woodring
+<li>Wendy Whitebread by Don Simpson
+<li>Wheela, Biker Bitch of the Apocalypse by Enrico Teodorani    
+<li>Whot Not!
+<li>Wipeout by Francesca Ghermandi
+<li>Wuvable Oaf
+<li>Zero Zero
+
 </p>
 </body>
 </html>
